--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -7,7 +7,7 @@
 	<key>AllowClipboardAccess</key>
 	<false/>
 	<key>AnimateDimming</key>
-	<false/>
+	<true/>
 	<key>AppleAntiAliasingThreshold</key>
 	<integer>1</integer>
 	<key>AppleScrollAnimationEnabled</key>
@@ -27,7 +27,7 @@
 	<key>CopyLastNewline</key>
 	<false/>
 	<key>CopySelection</key>
-	<true/>
+	<false/>
 	<key>Custom Color Presets</key>
 	<dict>
 		<key>Blazer</key>
@@ -9257,7 +9257,7 @@
 	<key>EnableRendezvous</key>
 	<false/>
 	<key>FocusFollowsMouse</key>
-	<false/>
+	<true/>
 	<key>FsTabDelay</key>
 	<real>1</real>
 	<key>GlobalKeyMap</key>
@@ -9365,7 +9365,7 @@
 	<key>HideScrollbar</key>
 	<false/>
 	<key>HideTab</key>
-	<false/>
+	<true/>
 	<key>HighlightTabLabels</key>
 	<true/>
 	<key>HotKeyBookmark</key>
@@ -9393,40 +9393,21 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/SettingFiles</string>
+	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
-	<key>NSTableView Columns KeyBingingTable</key>
-	<array>
-		<data>
-		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
-		hAErATCG
-		</data>
-		<string>198</string>
-		<data>
-		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
-		hAErATGG
-		</data>
-		<string>302</string>
-	</array>
-	<key>NSTableView Hidden Columns KeyBingingTable</key>
-	<array/>
-	<key>NSTableView Sort Ordering KeyBingingTable</key>
-	<array/>
 	<key>NSWindow Frame Preferences</key>
-	<string>204 261 924 485 0 0 1280 778 </string>
-	<key>NSWindow Frame SUStatusFrame</key>
-	<string>133 612 384 129 0 0 1280 778 </string>
+	<string>76 263 924 485 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>109 64 610 706 0 0 1280 778 </string>
+	<string>383 86 625 692 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>485 66 610 706 0 0 1280 778 </string>
+	<string>79 64 625 714 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>173 66 610 706 0 0 1280 778 </string>
+	<string>173 64 625 714 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9450,56 +9431,56 @@
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.25882354378700256</real>
+				<real>0.44705882668495178</real>
 				<key>Green Component</key>
-				<real>0.25882354378700256</real>
+				<real>0.45098039507865906</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.76470589637756348</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40784314274787903</real>
+				<real>0.66666668653488159</real>
 				<key>Green Component</key>
-				<real>0.80392158031463623</real>
+				<real>0.85882353782653809</real>
 				<key>Red Component</key>
-				<real>0.45490196347236633</real>
+				<real>0.66666668653488159</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.16078431904315948</real>
+				<real>0.66666668653488159</real>
 				<key>Green Component</key>
-				<real>0.72549021244049072</real>
+				<real>0.85882353782653809</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.85490196943283081</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.84313726425170898</real>
+				<real>0.85882353782653809</real>
 				<key>Green Component</key>
-				<real>0.84313726425170898</real>
+				<real>0.66666668653488159</real>
 				<key>Red Component</key>
-				<real>0.13725490868091583</real>
+				<real>0.66666668653488159</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.85490196943283081</real>
 				<key>Green Component</key>
-				<real>0.21568627655506134</real>
+				<real>0.66666668653488159</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.85882353782653809</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.88235294818878174</real>
+				<real>0.85882353782653809</real>
 				<key>Green Component</key>
-				<real>0.92941176891326904</real>
+				<real>0.85490196943283081</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.66666668653488159</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -9513,74 +9494,74 @@
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40784314274787903</real>
+				<real>0.45098039507865906</real>
 				<key>Green Component</key>
-				<real>0.68627452850341797</real>
+				<real>0.76470589637756348</real>
 				<key>Red Component</key>
-				<real>0.45490196347236633</real>
+				<real>0.44705882668495178</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.16078431904315948</real>
+				<real>0.44705882668495178</real>
 				<key>Green Component</key>
-				<real>0.67843139171600342</real>
+				<real>0.76470589637756348</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.7607843279838562</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52549022436141968</real>
+				<real>0.76470589637756348</real>
 				<key>Green Component</key>
-				<real>0.56078433990478516</real>
+				<real>0.44705882668495178</real>
 				<key>Red Component</key>
-				<real>0.20000000298023224</real>
+				<real>0.45098039507865906</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.90092635154724121</real>
+				<real>0.7607843279838562</real>
 				<key>Green Component</key>
-				<real>0.077163636684417725</real>
+				<real>0.44705882668495178</real>
 				<key>Red Component</key>
-				<real>0.58085638284683228</real>
+				<real>0.76470589637756348</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.84313726425170898</real>
+				<real>0.76470589637756348</real>
 				<key>Green Component</key>
-				<real>0.84313726425170898</real>
+				<real>0.7607843279838562</real>
 				<key>Red Component</key>
-				<real>0.13725490868091583</real>
+				<real>0.44705882668495178</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.87843137979507446</real>
+				<real>0.85098040103912354</real>
 				<key>Green Component</key>
-				<real>0.88235294818878174</real>
+				<real>0.85098040103912354</real>
 				<key>Red Component</key>
-				<real>0.88235294818878174</real>
+				<real>0.85098040103912354</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.19607843458652496</real>
 				<key>Green Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.19607843458652496</real>
 				<key>Red Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.19607843458652496</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.25882354378700256</real>
+				<real>0.66666668653488159</real>
 				<key>Green Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.66666668653488159</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.85882353782653809</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9589,11 +9570,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.26274511218070984</real>
+				<real>0.18431372940540314</real>
 				<key>Green Component</key>
-				<real>0.21568627655506134</real>
+				<real>0.14901961386203766</real>
 				<key>Red Component</key>
-				<real>0.17647059261798859</real>
+				<real>0.16078431904315948</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9612,11 +9593,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.37237682938575745</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.4359603226184845</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.85236084461212158</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9629,23 +9610,23 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.94901961088180542</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.90196079015731812</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.85098040103912354</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.18431372940540314</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.14901961386203766</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.16078431904315948</real>
 			</dict>
 			<key>Cursor Type</key>
-			<integer>2</integer>
+			<integer>1</integer>
 			<key>Custom Command</key>
 			<string>No</string>
 			<key>Custom Directory</key>
@@ -9663,11 +9644,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.87843137979507446</real>
+				<real>0.94901961088180542</real>
 				<key>Green Component</key>
-				<real>0.88235294818878174</real>
+				<real>0.90196079015731812</real>
 				<key>Red Component</key>
-				<real>0.88235294818878174</real>
+				<real>0.85098040103912354</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -9678,7 +9659,7 @@
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Initial Text</key>
-			<string></string>
+			<string>tmux</string>
 			<key>Jobs to Ignore</key>
 			<array>
 				<string>rlogin</string>
@@ -10023,20 +10004,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>1</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.25882354378700256</real>
 				<key>Green Component</key>
-				<real>0.21568627655506134</real>
+				<real>0.21176470816135406</real>
 				<key>Red Component</key>
-				<real>0.17647059261798859</real>
+				<real>0.027450980618596077</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10919,11 +10900,11 @@
 	<key>OpenBookmark</key>
 	<false/>
 	<key>OpenTmuxWindowsIn</key>
-	<integer>0</integer>
+	<integer>1</integer>
 	<key>PMPrintingExpandedStateForPrint2</key>
 	<false/>
 	<key>PassOnControlClick</key>
-	<false/>
+	<true/>
 	<key>PasteFromClipboard</key>
 	<false/>
 	<key>PointerActions</key>
@@ -10960,7 +10941,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/a13596/Desktop/repository/SettingFiles/mac</string>
+	<string>~/Desktop/repository/SettingFiles/mac/</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -10978,7 +10959,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-06-18T02:02:59Z</date>
+	<date>2014-07-29T15:34:46Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -10988,7 +10969,7 @@
 	<key>ShowPaneTitles</key>
 	<true/>
 	<key>SmartPlacement</key>
-	<false/>
+	<true/>
 	<key>SplitPaneDimmingAmount</key>
 	<real>0.40000000596046448</real>
 	<key>SwitchTabModifier</key>
@@ -10998,7 +10979,7 @@
 	<key>TabViewType</key>
 	<integer>0</integer>
 	<key>ThreeFingerEmulates</key>
-	<false/>
+	<true/>
 	<key>TmuxDashboardLimit</key>
 	<integer>10</integer>
 	<key>ToolbeltTools</key>
@@ -11009,7 +10990,7 @@
 		<string>Paste History</string>
 	</array>
 	<key>TripleClickSelectsFullWrappedLines</key>
-	<false/>
+	<true/>
 	<key>URLHandlersByGuid</key>
 	<dict/>
 	<key>UseBorder</key>
@@ -11033,6 +11014,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>1.0.0.20140518</string>
+	<string>1.0.0.20140629</string>
 </dict>
 </plist>
