--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9393,42 +9393,19 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/SettingFiles</string>
+	<string>~/Desktop/repository/SettingFiles/mac</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
-	<key>NSTableView Columns KeyBingingTable</key>
-	<array>
-		<data>
-		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
-		hAErATCG
-		</data>
-		<string>198</string>
-		<data>
-		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
-		hAErATGG
-		</data>
-		<string>302</string>
-	</array>
-	<key>NSTableView Hidden Columns KeyBingingTable</key>
-	<array/>
-	<key>NSTableView Sort Ordering KeyBingingTable</key>
-	<array/>
+	<key>NSWindow Frame NSColorPanel</key>
+	<string>1167 272 201 309 0 0 1920 1058 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>204 261 924 485 0 0 1280 778 </string>
-	<key>NSWindow Frame SUStatusFrame</key>
-	<string>1504 633 384 129 1280 -280 1920 1058 </string>
+	<string>996 391 924 485 0 0 1920 1058 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>49 66 610 706 0 0 1280 778 </string>
-	<key>NSWindow Frame iTerm Window 1</key>
-	<string>1395 15 610 748 1280 -280 1920 1058 </string>
-	<key>NSWindow Frame iTerm Window 2</key>
-	<string>1869 -9 610 748 1280 -280 1920 1058 </string>
-	<key>NSWindow Frame iTerm Window 3</key>
-	<string>1879 -4 610 748 1280 -280 1920 1058 </string>
+	<string>854 409 570 451 0 0 1920 1058 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9452,45 +9429,45 @@
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.47843137383460999</real>
 				<key>Green Component</key>
-				<real>0.45098039507865906</real>
+				<real>0.47843137383460999</real>
 				<key>Red Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.72156864404678345</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.74117648601531982</real>
 				<key>Green Component</key>
 				<real>0.85882353782653809</real>
 				<key>Red Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.74117648601531982</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.74117648601531982</real>
 				<key>Green Component</key>
 				<real>0.85882353782653809</real>
 				<key>Red Component</key>
-				<real>0.85490196943283081</real>
+				<real>0.85882353782653809</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
 				<real>0.85882353782653809</real>
 				<key>Green Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.74117648601531982</real>
 				<key>Red Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.74117648601531982</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85490196943283081</real>
+				<real>0.85882353782653809</real>
 				<key>Green Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.74117648601531982</real>
 				<key>Red Component</key>
 				<real>0.85882353782653809</real>
 			</dict>
@@ -9499,9 +9476,9 @@
 				<key>Blue Component</key>
 				<real>0.85882353782653809</real>
 				<key>Green Component</key>
-				<real>0.85490196943283081</real>
+				<real>0.85882353782653809</real>
 				<key>Red Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.74117648601531982</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -9515,47 +9492,47 @@
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45098039507865906</real>
+				<real>0.47843137383460999</real>
 				<key>Green Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.72156864404678345</real>
 				<key>Red Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.47843137383460999</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.47843137383460999</real>
 				<key>Green Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.72156864404678345</real>
 				<key>Red Component</key>
-				<real>0.7607843279838562</real>
+				<real>0.72156864404678345</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.72156864404678345</real>
 				<key>Green Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.47843137383460999</real>
 				<key>Red Component</key>
-				<real>0.45098039507865906</real>
+				<real>0.47843137383460999</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.7607843279838562</real>
+				<real>0.72156864404678345</real>
 				<key>Green Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.47843137383460999</real>
 				<key>Red Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.72156864404678345</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.72156864404678345</real>
 				<key>Green Component</key>
-				<real>0.7607843279838562</real>
+				<real>0.72156864404678345</real>
 				<key>Red Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.47843137383460999</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
@@ -9569,18 +9546,18 @@
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.14901961386203766</real>
 				<key>Green Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.14901961386203766</real>
 				<key>Red Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.14901961386203766</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.74117648601531982</real>
 				<key>Green Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.74117648601531982</real>
 				<key>Red Component</key>
 				<real>0.85882353782653809</real>
 			</dict>
@@ -9591,11 +9568,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18431372940540314</real>
-				<key>Green Component</key>
 				<real>0.14901961386203766</real>
+				<key>Green Component</key>
+				<real>0.098039217293262482</real>
 				<key>Red Component</key>
-				<real>0.16078431904315948</real>
+				<real>0.050980392843484879</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9608,17 +9585,17 @@
 			<key>Blinking Cursor</key>
 			<true/>
 			<key>Blur</key>
-			<false/>
+			<true/>
 			<key>Blur Radius</key>
-			<real>2</real>
+			<real>0.6217617392539978</real>
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.37237682938575745</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.4359603226184845</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.85236084461212158</real>
+				<real>0.0</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9627,7 +9604,7 @@
 			<key>Columns</key>
 			<integer>100</integer>
 			<key>Command</key>
-			<string>screen</string>
+			<string>zsh</string>
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
@@ -9640,16 +9617,16 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18431372940540314</real>
-				<key>Green Component</key>
 				<real>0.14901961386203766</real>
+				<key>Green Component</key>
+				<real>0.098039217293262482</real>
 				<key>Red Component</key>
-				<real>0.16078431904315948</real>
+				<real>0.050980392843484879</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
 			<key>Custom Command</key>
-			<string>No</string>
+			<string>Yes</string>
 			<key>Custom Directory</key>
 			<string>Recycle</string>
 			<key>Default Bookmark</key>
@@ -9680,7 +9657,7 @@
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Initial Text</key>
-			<string>tmux</string>
+			<string></string>
 			<key>Jobs to Ignore</key>
 			<array>
 				<string>rlogin</string>
@@ -9995,7 +9972,7 @@
 			<key>Log Directory</key>
 			<string></string>
 			<key>Minimum Contrast</key>
-			<real>0.22695311903953552</real>
+			<real>0.0</real>
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
@@ -10034,11 +10011,11 @@
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.25882354378700256</real>
+				<real>0.019607843831181526</real>
 				<key>Green Component</key>
-				<real>0.21176470816135406</real>
+				<real>0.22352941334247589</real>
 				<key>Red Component</key>
-				<real>0.027450980618596077</real>
+				<real>0.031372550874948502</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10157,7 +10134,7 @@
 			<key>Terminal Type</key>
 			<string>xterm</string>
 			<key>Transparency</key>
-			<real>0.06124260276556015</real>
+			<real>0.15073502063751221</real>
 			<key>Triggers</key>
 			<array/>
 			<key>Unlimited Scrollback</key>
@@ -10980,7 +10957,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-07-31T02:05:07Z</date>
+	<date>2014-08-05T06:38:28Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -10992,7 +10969,7 @@
 	<key>SmartPlacement</key>
 	<true/>
 	<key>SplitPaneDimmingAmount</key>
-	<real>0.40000000596046448</real>
+	<real>0.44018179178237915</real>
 	<key>SwitchTabModifier</key>
 	<integer>4</integer>
 	<key>SwitchWindowModifier</key>
@@ -11035,6 +11012,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>1.0.0.20140629</string>
+	<string>2.0</string>
 </dict>
 </plist>
