--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -5,7 +5,7 @@
 	<key>AdjustWindowForFontSizeChange</key>
 	<true/>
 	<key>AllowClipboardAccess</key>
-	<false/>
+	<true/>
 	<key>AnimateDimming</key>
 	<true/>
 	<key>AppleAntiAliasingThreshold</key>
@@ -9247,7 +9247,7 @@
 	<key>Default Bookmark Guid</key>
 	<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
 	<key>DimBackgroundWindows</key>
-	<false/>
+	<true/>
 	<key>DimInactiveSplitPanes</key>
 	<true/>
 	<key>DimOnlyText</key>
@@ -9363,7 +9363,7 @@
 	<key>HideMenuBarInFullscreen</key>
 	<true/>
 	<key>HideScrollbar</key>
-	<false/>
+	<true/>
 	<key>HideTab</key>
 	<true/>
 	<key>HighlightTabLabels</key>
@@ -9401,7 +9401,7 @@
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
 	<key>NSWindow Frame Preferences</key>
-	<string>60 280 924 485 0 0 1280 777 </string>
+	<string>314 226 924 485 0 0 1280 777 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>931 621 384 129 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
@@ -9424,146 +9424,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.24313725531101227</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.24313725531101227</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.24313725531101227</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.086274512112140656</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.043137256056070328</real>
 				<key>Red Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.59215688705444336</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.2039216011762619</real>
+				<real>0.63529413938522339</real>
 				<key>Green Component</key>
-				<real>0.88627451658248901</real>
+				<real>0.83529412746429443</real>
 				<key>Red Component</key>
-				<real>0.54117649793624878</real>
+				<real>0.52941179275512695</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.30980390310287476</real>
+				<real>0.027450980618596077</real>
 				<key>Green Component</key>
-				<real>0.91372549533843994</real>
+				<real>0.81568628549575806</real>
 				<key>Red Component</key>
-				<real>0.98823529481887817</real>
+				<real>0.94509804248809814</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.81176471710205078</real>
+				<real>0.729411780834198</real>
 				<key>Green Component</key>
-				<real>0.62352937459945679</real>
+				<real>0.42352941632270813</real>
 				<key>Red Component</key>
-				<real>0.44705879688262939</real>
+				<real>0.18039216101169586</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.65882349014282227</real>
+				<real>0.62352943420410156</real>
 				<key>Green Component</key>
-				<real>0.49803918600082397</real>
+				<real>0.63529413938522339</real>
 				<key>Red Component</key>
-				<real>0.67843139171600342</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.88627451658248901</real>
+				<real>0.99607843160629272</real>
 				<key>Green Component</key>
-				<real>0.88627451658248901</real>
+				<real>0.98039215803146362</real>
 				<key>Red Component</key>
-				<real>0.2039216011762619</real>
+				<real>0.10980392247438431</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92549020051956177</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.93333327770233154</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.93333327770233154</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.023529410362243652</real>
+				<real>0.16470588743686676</real>
 				<key>Green Component</key>
-				<real>0.60392159223556519</real>
+				<real>0.58823531866073608</real>
 				<key>Red Component</key>
-				<real>0.30588239431381226</real>
+				<real>0.027450980618596077</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.78039216995239258</real>
 				<key>Green Component</key>
-				<real>0.62745100259780884</real>
+				<real>0.93333333730697632</real>
 				<key>Red Component</key>
-				<real>0.76862752437591553</real>
+				<real>0.97254902124404907</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.64313727617263794</real>
+				<real>0.54117649793624878</real>
 				<key>Green Component</key>
-				<real>0.39607840776443481</real>
+				<real>0.24313725531101227</real>
 				<key>Red Component</key>
-				<real>0.2039216011762619</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.48235291242599487</real>
+				<real>0.56862747669219971</real>
 				<key>Green Component</key>
-				<real>0.31372550129890442</real>
+				<real>0.27450981736183167</real>
 				<key>Red Component</key>
-				<real>0.45882350206375122</real>
+				<real>0.91372549533843994</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.60392159223556519</real>
+				<real>0.92549020051956177</real>
 				<key>Green Component</key>
-				<real>0.59607851505279541</real>
+				<real>0.81960785388946533</real>
 				<key>Red Component</key>
-				<real>0.023529410362243652</real>
+				<real>0.5372549295425415</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.81176471710205078</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.84313732385635376</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.82745099067687988</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.32549020648002625</real>
+				<real>0.40000000596046448</real>
 				<key>Green Component</key>
-				<real>0.34117650985717773</real>
+				<real>0.40000000596046448</real>
 				<key>Red Component</key>
-				<real>0.33333331346511841</real>
+				<real>0.40000000596046448</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.16078430414199829</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.16078430414199829</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.93725490570068359</real>
+				<real>0.87058824300765991</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9572,11 +9572,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.95686274766921997</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.95686274766921997</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.95686274766921997</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9597,9 +9597,9 @@
 				<key>Blue Component</key>
 				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.3333333432674408</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.78823530673980713</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9612,20 +9612,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.24705882370471954</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.24705882370471954</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.24705882370471954</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.95686274766921997</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.95686274766921997</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.95686274766921997</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9646,11 +9646,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.24313725531101227</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.24313725531101227</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.24313725531101227</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10006,20 +10006,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.32549020648002625</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.32549020648002625</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.32549020648002625</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.88627451658248901</real>
 				<key>Green Component</key>
-				<real>0.8353000283241272</real>
+				<real>0.75686275959014893</real>
 				<key>Red Component</key>
-				<real>0.70980000495910645</real>
+				<real>0.66274511814117432</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10961,7 +10961,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-03-17T17:15:43Z</date>
+	<date>2015-03-18T17:23:55Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
